# University

./: .gitignore  readme.md  Титульный лист.docx
Semester-1/Введение в профессию (15)/Л1/: Лабораторная работа 1 отчёт.docx
Semester-1/Введение в профессию (15)/Л2/: Дополнительное образование.pptx  Лабораторная работа 2.xlsx
Semester-1/Введение в профессию (15)/Л3/: Задание.docx  Резюме.docx
Semester-1/Введение в профессию (15)/Реферат/: Презентация.pptx  Эволюция сети Internet.docx
Semester-1/История/: Презентация1.pptx  история.pptx
Semester-1/Русский язык/: Графические окказионализмы.docx  Графические окказионализмы.pptx  Дебаты.xlsx
Semester-2/Английский/: Tower Bridge.pptx
Semester-2/Практика/: Дневник сидоров.docx  Методы рендеринга веб приложений отчёт.docx  Методы рендеринга веб-приложений.pptx  Отчёт.docx
Semester-3/Программирование ЦПП (17)/cpp-project/: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab6.cpp  lab7.cpp  lab82  zad10.cpp  zad2.cpp  zad5.cpp  zad8.cpp  zad9.cpp
Semester-3/Программирование ЦПП (17)/cpp-project/assets/: lab8in.txt  lab8out.txt  zad81.txt  zad82.txt  zad9out.txt
Semester-3/Программирование ЦПП (17)/cpp-project/iz/: zad1.cpp  zad10.cpp  zad11.cpp  zad3.cpp  zad4.cpp  zad6.cpp  zad7.cpp
Semester-3/Программирование ЦПП (17)/cpp-project/labs/: lab1.cpp  lab3.cpp  lab4.cpp  lab6.cpp  lab8.cpp  lab82.cpp  lab9.cpp
Semester-3/Проекты (ОПД)/: Платформа обучения ии.docx
Semester-3/Физра/: Эндокринная система и диабет физиологические причины последствия и пути профилактики.docx
Semester-3/Экономика/: тест1.txt  тест2.txt  тест3.txt  тест4.txt
Semester-4/: Расписание 4 сем.xlsx
Semester-4/БЖД/: Транспортная безопасность.pptx
Semester-4/Майнор/: Отчёт по работе.docx
Semester-4/ООП/: КР_Сидроров_номера.docx
Semester-4/Практика/: ~$Обзор и описание применения современных инструментов для frontend-разработчика.pptx  Дневник Сидоров ДС.doc  Обзор и описание применения современных инструментов для frontend-разработчика.pptx  Отчёт Сидоров ДС.docx
Semester-4/Физра/: ~$ияние утренней прогулки на свежем воздухе на качество ночного сна.docx  Влияние утренней прогулки на свежем воздухе на качество ночного сна.docx
Semester-5/Физическая культура/: Влияние ограничения использования гаджетов перед сном на качество сна студентов в течение недели.docx
Semester-5/Электроника и микропроцессорная техника/: команды ЦПУ.docx
Semester-6/Графические системы/: lamp-a4.ai  lamp.ai
(+656 files in other folders)
