cmake_minimum_required(VERSION 3.29)
project(lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab1 lab1.cpp
        lab1.cpp)

add_executable(lab2 lab2.cpp
        lab2.cpp)

add_executable(lab3 lab3.cpp
        lab3.cpp)

add_executable(lab4 lab4.cpp
        lab4.cpp)

add_executable(lab6 lab6.cpp
        lab6.cpp)

add_executable(lab7 lab7.cpp
        lab7.cpp)