cmake_minimum_required(VERSION 3.29)
project(lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab1 lab1.cpp
        lab1.cpp)

add_executable(lab2 lab2.cpp
        lab2.cpp)

add_executable(lab3 lab3.cpp
        lab3.cpp)

add_executable(lab4 lab4.cpp
        lab4.cpp)

add_executable(lab6 lab6.cpp
        lab6.cpp)

add_executable(lab7 lab7.cpp
        lab7.cpp)

add_executable(zad1 zad1.cpp
        zad1.cpp)

add_executable(zad2 zad2.cpp
        zad2.cpp)

add_executable(zad3 zad3.cpp
        zad3.cpp)

add_executable(zad4 zad4.cpp
        zad4.cpp)

add_executable(zad5 zad5.cpp
        zad5.cpp)

add_executable(zad6 zad6.cpp
        zad6.cpp)

add_executable(zad7 zad7.cpp
        zad7.cpp)

add_executable(zad8 zad8.cpp
        zad8.cpp)

add_executable(zad9 zad9.cpp
        zad9.cpp)
