cmake_minimum_required(VERSION 3.29)
project(lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab1 labs/lab1.cpp
        labs/lab1.cpp)

add_executable(lab2 labs/lab2.cpp
        labs/lab2.cpp)

add_executable(lab3 labs/lab3.cpp
        labs/lab3.cpp)

add_executable(lab4 labs/lab4.cpp
        labs/lab4.cpp)

add_executable(lab6 labs/lab6.cpp
        labs/lab6.cpp)

add_executable(lab7 labs/lab7.cpp
        labs/lab7.cpp)

add_executable(zad1 iz/zad1.cpp
        iz/zad1.cpp)

add_executable(zad2 iz/zad2.cpp
        iz/zad2.cpp)

add_executable(zad3 iz/zad3.cpp
        iz/zad3.cpp)

add_executable(zad4 iz/zad4.cpp
        iz/zad4.cpp)

add_executable(zad5 iz/zad5.cpp
        iz/zad5.cpp)

add_executable(zad6 iz/zad6.cpp
        iz/zad6.cpp)

add_executable(zad7 iz/zad7.cpp
        iz/zad7.cpp)

add_executable(zad8 iz/zad8.cpp
        iz/zad8.cpp)

add_executable(zad9 iz/zad9.cpp
        iz/zad9.cpp)

add_executable(zad10 iz/zad10.cpp
        iz/zad10.cpp)

add_executable(zad11 iz/zad11.cpp
        iz/zad11.cpp)
